# framework-comparison

./: .gitignore  LICENSE  README.md  pyproject.toml
.learning/fasthtml/: todo.py  todos.db-wal
.learning/nextjs/nextjs-dashboard/: pnpm-lock.yaml
.learning/nextjs/nextjs-dashboard/app/: layout.tsx
.learning/react/: package-lock.json
.learning/react/app/: like-button.jsx  page.jsx
data/: sample_data.csv
fastapi/: main.py
fastapi+svelte/: database.sqlite  main.py
fastapi+svelte/svelte-app/: package.json  pnpm-lock.yaml  vite.config.ts
fastapi+svelte/svelte-app/src/routes/: +page.svelte
fastapi/static/: script.js
fastapi/templates/: index.html
fastapipy/: database.db  logger.py  main.py
fastapipy/static/: script.js  style.css
fastapipy/templates/: index.html
fasthtml/: main-jeremy.py  main.py
fasthtml-intro/: .sesskey  imagegen.py  main.py  todos.db  todos.db-shm  todos.db-wal
fasthtml-jeremy/: main.py
fasthtml/static/: style.css
fasthtmlpy/: .sesskey  main.py
fasthtmlpy/static/: style.css
intros/fasthtml/: todos.db-shm
intros/nextjs/nextjs-dashboard/: .eslintrc.json  auth.ts  next.config.mjs  package.json  pnpm-lock.yaml
intros/react/: package.json
nextjs/: package-lock.json  package.json  pnpm-lock.yaml  your_database.sqlite
nextjs/app/: layout.tsx  page.tsx
nextjs/components/: DataTable.tsx  DownloadButton.tsx  FileUpload.tsx
nextjs/lib/: db.ts
svelte/: data.sqlite  package.json  pnpm-lock.yaml
svelte/src/: hooks.server.ts
svelte/src/lib/: api.ts  db.ts
svelte/src/routes/: +page.svelte
(+30 files in other folders)
