[project]
name = "framework-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.2",
    "jinja2>=3.1.4",
    "python-fasthtml>=0.5.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.6",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]